# telegram_django_bot

./: pyproject.toml  requirements.py  requirements.txt  setup.cfg
telegram_django_bot/: __init__.py  admin.py  admin_utils.py  apps.py  constants.py  decorators.py  dispatcher.py  exceptions.py  forms.py  generics.py  main.py  mixins.py  models.py  permissions.py  resources.py  routers.py  routing.py  tasks.py  td_viewset.py  telegram_lib_redefinition.py  test.py  tg_dj_bot.py  throttling.py  user_viewset.py  utils.py  views.py  viewsets.py
telegram_django_bot/conf/: __init__.py  settings.py
telegram_django_bot/ext/: databasepersistence.py
telegram_django_bot/migrations/: 0001_initial.py  0002_delete_user.py  0003_botmenuelem_message_format.py  0004_auto_20220915_0448.py  0005_auto_20221010_1330.py  0006_auto_20221023_0157.py  0007_auto_20221202_0305.py  0008_auto_20221225_1050.py
telegram_django_bot/utrls/: __init__.py  conf.py  resolvers.py
telegram_django_bot/views/: base.py  detail.py  edit.py  list.py
tests/: app_settings.py  async_bot_start.py  bot_start.py  manage.py  test_bme.py  test_routing.py  test_td_bot.py  test_user.py  test_utils.py  test_viewset.py  urls.py
tests/test_app/: admin.py  apps.py  forms.py  handlers.py  models.py  permissions.py  utrls.py  views.py
tests/test_app/migrations/: 0001_initial.py
